--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -3,6 +3,9 @@ name = "s2-common"
 version.workspace = true
 edition.workspace = true
 
+[features]
+rkyv = ["dep:rkyv"]
+
 [dependencies]
 bytes = { workspace = true }
 compact_str = { workspace = true, features = ["serde"] }
@@ -10,7 +13,7 @@ const_format = { workspace = true }
 enum-ordinalize = { workspace = true }
 enumset = { workspace = true }
 futures = { workspace = true }
-rkyv = { workspace = true } # TODO optional
+rkyv = { workspace = true, optional = true }
 serde = { workspace = true }
 strum = { workspace = true }
 thiserror = { workspace = true }
