--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -5,6 +5,7 @@ edition.workspace = true
 
 [features]
 rkyv = ["dep:rkyv"]
+utoipa = ["dep:utoipa"]
 
 [dependencies]
 bytes = { workspace = true }
@@ -18,6 +19,7 @@ serde = { workspace = true }
 strum = { workspace = true }
 thiserror = { workspace = true }
 time = { workspace = true }
+utoipa = { workspace = true, optional = true }
 
 [dev-dependencies]
 proptest = { workspace = true }
