--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,18 +12,19 @@ edition = "2024"
 
 [workspace.dependencies]
 async-trait = "0.1.89"
+axum = "0.8.6"
 base64ct = { version = "1.8.0", features = ["alloc"] }
 bytes = "1.10.1"
 compact_str = "0.9.0"
-clap = { version = "4.5.50", features = ["derive"] }
+clap = { version = "4.5.51", features = ["derive"] }
 const_format = "0.2.35"
-enum-ordinalize = "4.3.0"
+enum-ordinalize = "4.3.2"
 enumset = "1.1.10"
 eyre = "0.6.12"
 futures = "0.3.31"
 http = "1.3.1"
 itertools = "0.14.0"
-proptest = "1.8.0"
+proptest = "1.9.0"
 prost = "0.14.1"
 prost-build = "0.14.1"
 rkyv = "0.8.12"
