--- a/lite/Cargo.toml
+++ b/lite/Cargo.toml
@@ -11,6 +11,6 @@ compact_str = { workspace = true }
 eyre = { workspace = true }
 futures = { workspace = true }
 s2-api = { path = "../api" }
-s2-common = { path = "../common" }
+s2-common = { path = "../common", features = ["clap"] }
 slatedb = { workspace = true }
 thiserror = { workspace = true }
