--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ const_format = "0.2.35"
 enum-ordinalize = "4.3.2"
 enumset = "1.1.10"
 eyre = "0.6.12"
+flate2 = "1.1.5"
 futures = "0.3.31"
 http = "1.3.1"
 itertools = "0.14.0"
@@ -30,4 +31,6 @@ slatedb = "0.8.2"
 strum = { version = "0.27", features = ["derive"] }
 thiserror = "2.0.17"
 time = { version = "0.3.44", features = ["serde", "parsing", "formatting"] }
+tokio-util = "0.7.17"
 utoipa = { git = "https://github.com/infiniteregrets/utoipa", rev = "dee66d14360e91dfa38bad728be2cecc735368de" }
+zstd = "0.13.3"
