--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -13,8 +13,9 @@ axum = { workspace = true, optional = true }
 base64ct = { workspace = true }
 bytes = { workspace = true }
 compact_str = { workspace = true, features = ["serde"] }
-enum-ordinalize = "4.3.0"
-flate2 = "1.0"
+enum-ordinalize = { workspace = true }
+flate2 = { workspace = true }
+futures = { workspace = true }
 http = { workspace = true }
 itertools = { workspace = true }
 prost = { workspace = true }
@@ -22,9 +23,9 @@ s2-common = { path = "../common" }
 serde = { workspace = true }
 thiserror = { workspace = true }
 time = { workspace = true }
-tokio-util = { version = "0.7.16", features = ["rt", "codec"] }
+tokio-util = { workspace = true, features = ["rt", "codec"] }
 utoipa = { workspace = true, optional = true }
-zstd = "0.13"
+zstd = { workspace = true }
 
 [build-dependencies]
 prost-build = { workspace = true, optional = true }
