--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ members = ["common", "api", "lite"]
 
 [workspace.package]
 version = "0.1.0"
+license = "Apache-2.0"
 edition = "2024"
 
 [workspace.dependencies]
