--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -1,7 +1,8 @@
 [package]
 name = "s2-api"
-version.workspace = true
 edition.workspace = true
+license.workspace = true
+version.workspace = true
 
 [features]
 axum = ["dep:axum"]
