--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -1,7 +1,8 @@
 [package]
 name = "s2-common"
-version.workspace = true
 edition.workspace = true
+license.workspace = true
+version.workspace = true
 
 [features]
 rkyv = ["dep:rkyv", "compact_str/rkyv"]
