--- a/lite/Cargo.toml
+++ b/lite/Cargo.toml
@@ -1,7 +1,8 @@
 [package]
 name = "s2-lite"
-version.workspace = true
 edition.workspace = true
+license.workspace = true
+version.workspace = true
 
 [dependencies]
 async-trait = { workspace = true }
