--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ bytes = "1.10.1"
 compact_str = "0.9.0"
 clap = { version = "4.5.51", features = ["derive"] }
 const_format = "0.2.35"
+dashmap = "6.1.0"
 enum-ordinalize = "4.3.2"
 enumset = "1.1.10"
 eyre = "0.6.12"
@@ -32,6 +33,7 @@ slatedb = "0.8.2"
 strum = { version = "0.27", features = ["derive"] }
 thiserror = "2.0.17"
 time = { version = "0.3.44", features = ["serde", "parsing", "formatting"] }
+tokio = "1.48.0"
 tokio-util = "0.7.17"
 utoipa = { git = "https://github.com/infiniteregrets/utoipa", rev = "dee66d14360e91dfa38bad728be2cecc735368de" }
 zstd = "0.13.3"
