--- a/lite/Cargo.toml
+++ b/lite/Cargo.toml
@@ -6,6 +6,7 @@ version.workspace = true
 
 [dependencies]
 async-trait = { workspace = true }
+blake3 = { workspace = true }
 bytes = { workspace = true }
 clap = { workspace = true }
 compact_str = { workspace = true }
