--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,6 +29,7 @@ jobs:
         with:
           components: clippy
       - uses: Swatinem/rust-cache@v2
+      - uses: arduino/setup-protoc@v3
       - run: cargo clippy --workspace --all-features --all-targets -- -D warnings --allow deprecated
 
   test:
@@ -38,5 +39,6 @@ jobs:
       - uses: actions/checkout@v4
       - uses: dtolnay/rust-toolchain@stable
       - uses: Swatinem/rust-cache@v2
+      - uses: arduino/setup-protoc@v3
       - uses: taiki-e/install-action@nextest
       - run: cargo nextest run --workspace --all-features
