--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [workspace]
 resolver = "2"
-members = ["common", "api", "lite"]
+members = ["api", "common", "lite"]
 
 [workspace.package]
 edition = "2024"
@@ -11,11 +11,13 @@ version = "0.1.0"
 async-stream = "0.3.6"
 async-trait = "0.1.89"
 axum = "0.8.8"
-base64ct = { version = "1.8.1", features = ["alloc"] }
+axum-extra = "0.12"
+axum-server = "0.8.0"
+base64ct = { version = "1.8.2", features = ["alloc"] }
 blake3 = "1.8.2"
 bytes = "1.11.0"
+clap = { version = "4.5.54", features = ["derive"] }
 compact_str = "0.9.0"
-clap = { version = "4.5.53", features = ["derive"] }
 const_format = "0.2.35"
 dashmap = "6.1.0"
 enum-ordinalize = "4.3.2"
@@ -25,19 +27,24 @@ flate2 = "1.1.5"
 futures = "0.3.31"
 http = "1.4.0"
 itertools = "0.14.0"
+parking_lot = "0.12.5"
 proptest = "1.9.0"
 prost = "0.14.1"
 prost-build = "0.14.1"
 rand = "0.9.2"
+rcgen = "0.14"
 rkyv = "0.8.12"
 rstest = "0.26.1"
 serde = { version = "1.0.228", features = ["derive"] }
-serde_json = "1.0.147"
-slatedb = { git = "https://github.com/slatedb/slatedb", rev = "4296c696b8b7c1cdf2ad79a9900de0d769a75576" }
+serde_json = "1.0.148"
+slatedb = "0.10.0"
 strum = { version = "0.27", features = ["derive"] }
 thiserror = "2.0.17"
 time = { version = "0.3.44", features = ["serde", "parsing", "formatting"] }
-tokio = "1.48.0"
-tokio-util = "0.7.17"
+tokio = "1.49.0"
+tokio-util = "0.7.18"
+tracing = "0.1"
+tracing-subscriber = "0.3"
 utoipa = { git = "https://github.com/infiniteregrets/utoipa", rev = "9cd181d40ac0a50551ebe1995a4d73e8685890d6", features = ["time"] }
+uuid = { version = "1.19.0", features = ["v4"] }
 zstd = "0.13.3"
