--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -5,18 +5,20 @@ license.workspace = true
 version.workspace = true
 
 [features]
+clap = ["dep:clap"]
 rkyv = ["dep:rkyv", "compact_str/rkyv"]
 utoipa = ["dep:utoipa"]
-clap = ["dep:clap"]
 
 [dependencies]
 bytes = { workspace = true }
+blake3 = { workspace = true }
 clap = { workspace = true, optional = true }
 compact_str = { workspace = true, features = ["serde"] }
 const_format = { workspace = true }
 enum-ordinalize = { workspace = true }
 enumset = { workspace = true }
 futures = { workspace = true }
+http = { workspace = true }
 rkyv = { workspace = true, optional = true }
 serde = { workspace = true }
 strum = { workspace = true }
