--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -31,7 +31,7 @@ serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
 strum = { workspace = true, features = ["derive"] }
 thiserror = { workspace = true }
-time = { workspace = true, features = ["serde", "parsing", "formatting"] }
+time = { workspace = true, features = ["serde", "formatting", "parsing"] }
 tokio-util = { workspace = true, features = ["rt", "codec", "io"] }
 utoipa = { workspace = true, optional = true, features = ["time"] }
 zstd = { workspace = true }
