--- a/Cargo.toml
+++ b/Cargo.toml
@@ -52,6 +52,9 @@ tokio-util = "0.7"
 tower-http = "0.6"
 tracing = "0.1"
 tracing-subscriber = "0.3"
-utoipa = "5.4"
+utoipa = { version = "5.4", features = ["time"] }
 uuid = "1.19"
 zstd = "0.13"
+
+[patch.crates-io]
+utoipa = { git = "https://github.com/infiniteregrets/utoipa", rev = "9cd181d40ac0a50551ebe1995a4d73e8685890d6" }
