--- a/lite/Cargo.toml
+++ b/lite/Cargo.toml
@@ -9,6 +9,9 @@ homepage.workspace = true
 keywords = ["s2", "durable", "streams", "object", "storage"]
 categories = ["database-implementations"]
 
+[features]
+utoipa = ["dep:utoipa", "s2-api/utoipa", "s2-common/utoipa"]
+
 [dependencies]
 async-stream = { workspace = true }
 async-trait = { workspace = true }
@@ -43,6 +46,11 @@ tokio-util = { workspace = true }
 tower-http = { workspace = true, features = ["trace"] }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true, features = ["env-filter"] }
+utoipa = { workspace = true, optional = true }
+
+[[bin]]
+name = "openapi"
+required-features = ["utoipa"]
 
 [dev-dependencies]
 proptest = { workspace = true }
