--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -33,7 +33,7 @@ strum = { workspace = true, features = ["derive"] }
 thiserror = { workspace = true }
 time = { workspace = true, features = ["serde", "formatting", "parsing"] }
 tokio-util = { workspace = true, features = ["codec", "io"] }
-utoipa = { workspace = true, optional = true, features = ["time"] }
+utoipa = { version = "5.4", optional = true, features = ["time"] }
 zstd = { workspace = true }
 
 [build-dependencies]
