--- a/lite/Cargo.toml
+++ b/lite/Cargo.toml
@@ -46,7 +46,7 @@ tokio-util = { workspace = true }
 tower-http = { workspace = true, features = ["trace"] }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true, features = ["env-filter"] }
-utoipa = { workspace = true, optional = true }
+utoipa = { version = "5.4", optional = true, features = ["time"] }
 
 [[bin]]
 name = "openapi"
