--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ axum-server = "0.8"
 base64ct = "1.8"
 blake3 = "1.8"
 bytes = "1.11"
+bytesize = "2.3"
 clap = "4.5"
 compact_str = "0.9"
 dashmap = "6.1"
