--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,7 @@ http = "1.4"
 itertools = "0.14"
 mime = "0.3"
 parking_lot = "0.12"
+pin-project = "1.1"
 prometheus = "0.14"
 proptest = "1.9"
 prost = "0.14"
@@ -50,6 +51,7 @@ thiserror = "2.0"
 time = "0.3"
 tokio = "1.49"
 tokio-util = "0.7"
+tower = "0.5"
 tower-http = "0.6"
 tracing = "0.1"
 tracing-subscriber = "0.3"
