feat(lite): complete Biscuit + RFC 9421 authorization system
Implements stateless authentication and authorization for s2-lite:

Authentication:
- Biscuit tokens with P-256 ECDSA signatures
- RFC 9421 HTTP Message Signatures for request binding
- Content-Digest verification for request bodies
- Token revocation storage in SlateDB

Authorization:
- Scope-based access control (basins, streams, access_tokens)
- Operation groups (account/basin/stream read/write)
- Fine-grained individual operation permissions
- Offline token delegation via Biscuit attenuation

Server configuration:
- S2_ROOT_KEY / --root-key for enabling auth
- S2_SIGNATURE_WINDOW / --signature-window for replay protection
- S2_METRICS_TOKEN / --metrics-token for metrics-only auth

Endpoints:
- POST /v1/access-tokens - issue tokens
- DELETE /v1/access-tokens/{id} - revoke by revocation ID
- All handlers now enforce authorization when auth enabled

Documentation:
- Comprehensive auth guide in lite/docs/authentication.md
- Updated README with auth section and configuration table
- Marked design docs as implemented

--- a/lite/Cargo.toml
+++ b/lite/Cargo.toml
@@ -29,7 +29,7 @@ axum-server = { workspace = true, features = ["tls-rustls"] }
 blake3 = { workspace = true }
 bytes = { workspace = true }
 bytesize = { workspace = true }
-clap = { workspace = true, features = ["derive"] }
+clap = { workspace = true, features = ["derive", "env"] }
 compact_str = { workspace = true }
 dashmap = { workspace = true }
 enum-ordinalize = { workspace = true }
@@ -74,4 +74,5 @@ sha2 = { workspace = true }
 
 [dev-dependencies]
 proptest = { workspace = true }
+tower = { version = "0.5", features = ["util"] }
 uuid = { workspace = true, features = ["v4"] }
