feat(lite): add X-Git-SHA response header
Add git SHA as a response header (X-Git-SHA) to all HTTP responses for build identification.

- Add SetResponseHeaderLayer to router with compile-time GIT_SHA
- Pass GIT_SHA build arg in Dockerfile
- Pass github.sha to Docker build in GitHub Actions workflow
- Add tower-http "set-header" feature

--- a/lite/Cargo.toml
+++ b/lite/Cargo.toml
@@ -58,6 +58,7 @@ tower-http = { workspace = true, features = [
     "compression-gzip",
     "decompression-zstd",
     "decompression-gzip",
+    "set-header",
 ] }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true, features = ["env-filter"] }
