--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -46,3 +46,5 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+          build-args: |
+            GIT_SHA=${{ github.sha }}
