--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -42,3 +42,6 @@ prost-build = { workspace = true, optional = true }
 [dev-dependencies]
 proptest = { workspace = true }
 rstest = { workspace = true }
+
+[lints]
+workspace = true
