--- a/release-plz.toml
+++ b/release-plz.toml
@@ -1,6 +1,6 @@
 [workspace]
-changelog_config = "cli/cliff.toml"
+changelog_config = "cliff.toml"
 git_tag_enable = true
-git_tag_name = "cli-v{{ version }}"
+git_tag_name = "v{{ version }}"
 git_release_enable = true
 pr_labels = ["release"]
