--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "s2-cli"
 description = "CLI for S2"
-version = "0.25.2"
+version.workspace = true
 edition.workspace = true
 license.workspace = true
 repository.workspace = true
