--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,7 +61,7 @@ jobs:
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
       - uses: taiki-e/install-action@nextest
-      - run: cargo nextest run --workspace --all-features -E 'not (package(s2-cli) & test(/integration/))'
+      - run: cargo nextest run --workspace --all-features -E 'not (package(s2-cli) & binary(integration))'
 
   build-server:
     name: Build s2-lite
