feat(cli): add interactive TUI mode

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,8 @@ homepage = "https://s2.dev"
 
 [workspace.dependencies]
 async-stream = "0.3"
+chrono = "0.4"
+crossterm = "0.28"
 async-trait = "0.1"
 aws-config = "1"
 aws-credential-types = "1"
@@ -46,6 +48,7 @@ proptest = "1.9"
 prost = "0.14"
 prost-build = "0.14"
 rand = "0.9"
+ratatui = "0.29"
 rcgen = "0.14"
 rkyv = "0.8"
 rstest = "0.26"
