move TUI deps to cli-specific

--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -18,12 +18,12 @@ axum-server = { workspace = true, features = ["tls-rustls"] }
 base64ct = { workspace = true, features = ["alloc"] }
 bytes = { workspace = true }
 bytesize = { workspace = true }
-chrono = { workspace = true }
+chrono = "0.4"
 clap = { workspace = true, features = ["derive"] }
 color-print = { workspace = true }
 colored = { workspace = true }
 config = { workspace = true }
-crossterm = { workspace = true }
+crossterm = "0.28"
 dirs = { workspace = true }
 eyre = { workspace = true }
 futures = { workspace = true }
@@ -34,7 +34,7 @@ json_to_table = { workspace = true }
 miette = { workspace = true, features = ["fancy"] }
 mimalloc = { workspace = true }
 rand = { workspace = true }
-ratatui = { workspace = true }
+ratatui = "0.29"
 rcgen = { workspace = true }
 s2-lite = { workspace = true }
 s2-sdk = { workspace = true, features = ["_hidden"] }
