--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,6 @@ resolver = "2"
 members = ["api", "common", "lite", "cli"]
 
 [workspace.package]
-version = "0.27.2"
 edition = "2024"
 license = "MIT"
 repository = "https://github.com/s2-streamstore/s2"
@@ -49,9 +48,9 @@ rand = "0.9"
 rcgen = "0.14"
 rkyv = "0.8"
 rstest = "0.26"
-s2-api = { version = "0.27.2", path = "api" }
-s2-common = { version = "0.27.2", path = "common" }
-s2-lite = { version = "0.27.2", path = "lite" }
+s2-api = { path = "api" }
+s2-common = { path = "common" }
+s2-lite = { path = "lite" }
 s2-sdk = "0.23"
 serde = "1.0"
 serde_json = "1.0"
