--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 name = "s2-api"
+version = "0.27.2"
 description = "API types for S2, the durable streams API"
 edition.workspace = true
 license.workspace = true
-version.workspace = true
 repository.workspace = true
 homepage.workspace = true
 keywords = ["s2", "durable", "streams", "log", "api"]
