--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -94,7 +94,7 @@ jobs:
             "ref": "main",
             "lang": "bun",
             "bun-version": "latest",
-            "test_cmd": "S2_LITE=1 bun run vitest --run --exclude '**/account-basin*'"
+            "test_cmd": "S2_LITE=1 bun run vitest --run --exclude '**/account-basin*' --exclude '**/accessTokens*' --exclude '**/metrics*'"
           },
           {
             "name": "rust",
