--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,6 +63,46 @@ jobs:
       - uses: taiki-e/install-action@nextest
       - run: cargo nextest run --workspace --all-features -E 'not (package(s2-cli) & binary(integration))'
 
+  helm-lint:
+    name: Helm Chart Lint & Test
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Install Helm
+        uses: azure/setup-helm@v4
+        with:
+          version: v3.14.0
+
+      - name: Lint Helm chart
+        run: helm lint charts/s2-lite
+
+      - name: Test template rendering (default)
+        run: helm template test-release charts/s2-lite --dry-run > /dev/null
+
+      - name: Test with TLS enabled
+        run: helm template test-release charts/s2-lite --set tls.enabled=true --dry-run > /dev/null
+
+      - name: Test with localStorage PVC
+        run: helm template test-release charts/s2-lite --set localStorage.enabled=true --set localStorage.persistentVolumeClaim.enabled=true --dry-run > /dev/null
+
+      - name: Test with localStorage emptyDir
+        run: helm template test-release charts/s2-lite --set localStorage.enabled=true --set localStorage.emptyDir.enabled=true --dry-run > /dev/null
+
+      - name: Test with S3 object storage
+        run: helm template test-release charts/s2-lite --set objectStorage.enabled=true --set objectStorage.bucket=test-bucket --dry-run > /dev/null
+
+      - name: Test with all features enabled
+        run: |
+          helm template test-release charts/s2-lite \
+            --set tls.enabled=true \
+            --set objectStorage.enabled=true \
+            --set objectStorage.bucket=test-bucket \
+            --set objectStorage.endpoint=https://s3.amazonaws.com \
+            --set serviceMonitor.enabled=true \
+            --dry-run > /dev/null
+
   build-server:
     name: Build s2-lite
     uses: ./.github/workflows/build-s2-lite.yml
