--- a/.github/workflows/helm-release.yml
+++ b/.github/workflows/helm-release.yml
@@ -37,7 +37,7 @@ jobs:
           skip_existing: true
         env:
           CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
-          CR_GENERATE_RELEASE_NOTES: true
+          CR_GENERATE_RELEASE_NOTES: "true"
 
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
